--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h2>GROUP TYPE</h2>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
   </body>
 </html>
