fix(error): Fixing Form submission canceled because the form is not connected error

--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <div id="app">
-      <h2>GROUP TYPE</h2>
-      <ul>
-        <li></li>
-      </ul>
-    </div>
+    <div id="app"></div>
   </body>
 </html>
